# Asteroid-GCC

./: .gitignore  CMakeLists.txt
Allegro-5.1.8/include/allegro5/platform/: alplatf.h
Source/: Main.cpp
Source/Headers/: Main.h  player.h  projectile.h  stdafx.h
image files/: ship.xcf
