CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
PROJECT(Asteroid_GCC)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

INCLUDE_DIRECTORIES("SOURCE/HEADERS" "ALLEGRO-5.1.8/INCLUDE")

SET(SOURCE_FILES SOURCE/MAIN.CPP)

ADD_EXECUTABLE(Asteroid_GCC ${SOURCE_FILES})

ADD_LIBRARY(allegro5 SHARED ${CMAKE_SOURCE_DIR}/Allegro-5.1.8/bin/allegro-5.1.8-monolith-md-debug.dll)
SET_TARGET_PROPERTIES( allegro5 PROPERTIES
        LINK_FLAGS -Wl,--allow-multiple-definition
        LINKER_LANGUAGE C)

TARGET_LINK_LIBRARIES(Asteroid_GCC ${CMAKE_SOURCE_DIR}/Allegro-5.1.8/bin/allegro-5.1.8-monolith-md-debug.dll)
